--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Darts</title>
+        <link href="style.css" rel="stylesheet" >
     </head>
     <body>
+        <h1>Darts</h1>
+
+        <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
